add_subdirectory(${CMAKE_SOURCE_DIR}/lib/third-party)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/math)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/storage)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/benchmark)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/identification)
add_subdirectory(${CMAKE_SOURCE_DIR}/lib/experiment)